--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
         run: git add .
       - name: 'Git commit'
         run: git commit -m "Add changes"
+      - name: cat ~/.git-credentials
+        run: ~/.git-credentials
       - name: 'GitHub Push'
         uses: ad-m/github-push-action@v0.6.0
         with:
